# q_bank_client

./: .gitignore  CMakeLists.txt
images/: images.qrc
qml/: Account.qml  Advertisement.qml  MainPage.qml  MainScreen.qml  PasswordHandler.qml  PasswordScreen.qml  PaymentsItem.qml  PaymentsPage.qml  RadiusImage.qml  ServiceItem.qml  ServicesPage.qml  ShadowRectangle.qml  SplashScreen.qml  backend.js  main.qml  qml.qrc  qtquickcontrols2.conf
src/: main.cpp
